
FILE(GLOB BENCHMARK_TESTS "*.bench.cc")

FOREACH(PATH ${BENCHMARK_TESTS})
  GET_FILENAME_COMPONENT(BENCH_FILE "${PATH}" NAME)
  SET(TARGET ${BENCH_FILE})

  ADD_EXECUTABLE(${TARGET} ${BENCH_FILE} utilities.cc)
  TARGET_LINK_LIBRARIES(${TARGET} PUBLIC benchmark::benchmark GTest::gtest)
  ADD_TEST(NAME ${TARGET} COMMAND ${TARGET} --benchmark_format=csv)
  TARGET_COMPILE_DEFINITIONS(${TARGET} PUBLIC)

ENDFOREACH()
